<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- CJ: Commented
    <item-->
    <!--android:id="@+id/navigation_group"-->
    <!--android:icon="@drawable/group_black"-->
    <!--android:title="@string/group" />-->

    <item
        android:id="@+id/navigation_mypage"
        android:icon="@drawable/ic_nav_my_page"
        android:title="@string/my_page" />

    <item
        android:id="@+id/navigation_stream"
        android:icon="@drawable/ic_nav_stream"
        android:title="@string/stream" />

    <item
        android:id="@+id/navigation_explore"
        android:icon="@drawable/ic_nav_explor"
        android:title="@string/explore" />

    <item
        android:id="@+id/navigation_call"
        android:icon="@drawable/ic_nav_call"
        android:title="@string/calls" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_nav_chat"
        android:title="@string/chats" />



    <!--    <item-->
    <!--        android:id="@+id/navigation_camera"-->
    <!--        android:icon="@drawable/photo_camera"-->
    <!--        android:title="@string/camera" />-->

    <!--    <item-->
    <!--        android:id="@+id/navigation_more"-->
    <!--        android:icon="@drawable/more_inactive_tab"-->
    <!--        android:title="@string/more" />-->

</menu>
