<?xml version="1.0" encoding="utf-8"?>
<com.instaconnect.android.widget.FrameViewLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="@dimen/_8sdp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_80sdp">

            <com.instaconnect.android.widget.BasicTextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/public_terms"
                android:textColor="@color/white"
                app:typeFace="@string/regular" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/black">

        <com.instaconnect.android.widget.BasicTextView
            android:id="@+id/tvCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="8dp"
            android:text="Cancel"
            android:textColor="@color/red"
            android:textSize="@dimen/_12sdp"
            app:typeFace="@string/bold" />

        <com.instaconnect.android.widget.BasicTextView
            android:id="@+id/tvAccept"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="8dp"
            android:text="Accept"
            android:textColor="@color/green_snake"
            android:textSize="@dimen/_12sdp"
            app:typeFace="@string/bold" />

    </LinearLayout>

</com.instaconnect.android.widget.FrameViewLayout>